// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popover behaves correctly when clicking on mask 1`] = `
<div>
  <div
    class="ui-popover"
  >
    <div
      class="ui-popover-mask"
    />
    <div
      class="ui-popover-content ui-popover-content-radius"
    >
      确认删除吗?
      <span
        class="ui-popover-arrow"
      />
    </div>
    <button
      class="ui-button theme-default"
      type="button"
    >
      Delete
    </button>
  </div>
</div>
`;

exports[`Popover renders Popover correctly with customized props 1`] = `
<div>
  <div
    class="ui-popover customized"
  >
    <div
      class="ui-popover-content ui-popover-content-radius"
    >
      确认删除吗
      <span
        class="ui-popover-arrow"
      />
    </div>
    <button
      class="ui-button theme-default"
      type="button"
    >
      Delete
    </button>
  </div>
</div>
`;

exports[`Popover renders Popover correctly with mask 1`] = `
<div>
  <div
    class="ui-popover"
  >
    <div
      class="ui-popover-mask"
    />
    <div
      class="ui-popover-content ui-popover-content-radius"
    >
      确认删除吗?
      <span
        class="ui-popover-arrow"
      />
    </div>
    <button
      class="ui-button theme-default"
      type="button"
    >
      Delete
    </button>
  </div>
</div>
`;

exports[`Popover renders Popover correctly with render props 1`] = `
<div>
  <div
    class="ui-popover"
  >
    <div
      class="ui-popover-content ui-popover-content-radius"
    >
      确认删除吗?
      <span
        class="ui-popover-arrow"
      />
    </div>
    <button
      class="ui-button theme-default"
      type="button"
    >
      Delete
    </button>
  </div>
</div>
`;

exports[`Popover renders normal Popover correctly 1`] = `
<div>
  <div
    class="ui-popover"
  >
    <div
      class="ui-popover-content ui-popover-content-radius"
    >
      确认删除吗
      <span
        class="ui-popover-arrow"
      />
    </div>
    <button
      class="ui-button theme-default"
      type="button"
    >
      Delete
    </button>
  </div>
</div>
`;
